--- a/screentest.html
+++ b/screentest.html
@@ -20,7 +20,7 @@
                         <td><input type="text" class="form-control"></td><!--tr>td*2,abbrv. for one row and two column-->
                     </tr>
                     <tr>
-                        <td>Admnno</td>
+                        <td>Branch</td>
                         <td><input type="text" class="form-control"></td>
                     </tr>
                     <tr>
