--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-success navbar-dark">
+
+        <!-- Links -->
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Students</a>
+          <li class="nav-item">
+            <a class="nav-link" href="index1.html">Product</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="book.html">Library</a>
+            <a class="nav-link" href="index2.html">Book</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="product.html">Product</a>
+            <a class="nav-link" href="tabledemo.html">Student</a>
           </li>
-         <li class="nav-item">
-             <a class="nav-link" href="login.html">Login</a>
-         </li>
         </ul>
+      
       </nav>
+      
     <table class="table"><!--class="table",bootstrap-->
         <tr>
             <td>Name</td>
